tests/compile/dup_alias.stderr
error: Alias "my_fn" is already defined
 --> tests/compile/dup_alias.rs:5:28
  |
5 |     my_fn = [gork, _, bork],
  |                            ^

error[E0425]: cannot find function `foo_baz` in this scope
  --> tests/compile/dup_alias.rs:13:16
   |
13 |     assert_eq!(foo_baz(), 42);
   |                ^^^^^^^ not found in this scope
